--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -52,47 +52,7 @@
                             <img src="images/logo.png" alt="SaasTrace">
                         </a>
                         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                            <ul class="navbar-nav ml-auto">
-                                <li class="menu-item menu-item-has-children"><a class="active" href="#">Home</a>
-                                    <ul class="sub-menu">
-                                        <li><a href="index.html" class="active">Home Saas</a></li>
-                                        <li><a href="home-startup.html">Home Startup</a></li>
-                                        <li><a href="home-agency.html">Home Agency</a></li>
-                                    </ul>
-                                </li>
-                                <li class="menu-item"><a href="about.html">About</a></li>
-                                <li class="menu-item menu-item-has-children"><a href="#">Blog</a>
-                                    <ul class="sub-menu">
-                                        <li><a href="blog.html">Right Sidebar Blog</a></li>
-                                        <li><a href="blog-single.html">Blog Single</a></li>
-                                    </ul>
-                                </li>
-                                <li class="menu-item menu-item-has-children"><a href="#">Portfolio</a>
-                                    <ul class="sub-menu">
-                                        <li><a href="port-gallery.html">Gallery</a></li>
-                                        <li><a href="port-masonry.html">Masonry</a></li>
-                                        <li><a href="port-metro.html">Metro</a></li>
-                                    </ul>
-                                </li>
-                                <li class="menu-item"><a href="contact.html">Contact Us</a></li>
-                            </ul>
-
-                            <ul class="saastrace-download-nav">
-                                <li class="nav-item">
-                                    <div class="hamburger-wrapper">
-                                        <button class="hamburger hamburger--spin" type="button">
-                                          <span class="hamburger-box">
-                                            <span class="hamburger-inner"></span>
-                                          </span>
-                                        </button>
-                                    </div><!-- .hamburger-wrapper -->
-                                </li>
-                            </ul><!-- .navbar-nav .ml-auto -->
-                        </div><!-- .collapse .navbar-collapse -->
-                    </nav>
-                </div><!-- .col-xs-12 -->
-            </div><!-- .row -->
-        </div><!-- .container -->
+                             -->
     </header><!-- .header-area -->
 
 
@@ -151,10 +111,10 @@
             <div class="row">
                 <div class="col">
                     <div class="saastrace-home-banner">
-                        <h2 class="banner-title wow fadeInUp" data-wow-delay="100ms">Being a star is a matter in industry </h2>
+                        <h2 class="banner-title wow fadeInUp" data-wow-delay="100ms">Приветствуем Вас на самом крутом сайте для прохождения тестов </h2>
                         <div class="button-area">
-                            <a href="#" class="btn-fill-red wow fadeInUp" data-wow-delay="200ms">explore more</a>
-                            <a href="#" class="btn-fill-dark wow fadeInUp" data-wow-delay="200ms">get software</a>
+                            <a href="#" class="btn-fill-red wow fadeInUp" data-wow-delay="200ms">Начать прохождение тестов</a>
+                            <a href="#" class="btn-fill-dark wow fadeInUp" data-wow-delay="200ms">Добавить свой уникальный тест</a>
                         </div><!-- .button-area -->
                         <div class="img-area">
                             <img class="wow fadeInUp" data-wow-delay="500ms" src="images/hero/saas-banner.png" alt="Saas Banner">
